--- a/hero_game1-1.html
+++ b/hero_game1-1.html
@@ -15,7 +15,7 @@
     <map name="octopus" id="map">
         <area  alt="1" title="" href="" shape="rect" coords="330,352,522,402" style="outline:none;" target="_self"     />
         <area  alt="2" title="" href="" shape="rect" coords="357,448,481,498" style="outline:none;" target="_self"     />
-        <area  alt="3" title="" href="file:///C:/Users/blyth/OneDrive/%E6%96%87%E4%BB%B6/html/hero/hero_game1-2.html" shape="rect" coords="494,493,571,614" style="outline:none;" target="_self"     />
+        <area  alt="3" title="" href="https://nayudochesuliz.github.io/heronay/hero_game1-2.html" shape="rect" coords="494,493,571,614" style="outline:none;" target="_self"     />
         <area  alt="4" title="" href="" shape="rect" coords="655,498,732,619" style="outline:none;" target="_self"     />
         <area  alt="5" title="" href="" shape="rect" coords="778,486,855,607" style="outline:none;" target="_self"     />
         <area  alt="6" title="" href="" shape="rect" coords="896,490,1109,545" style="outline:none;" target="_self"     />
