--- a/hero_game1-2.html
+++ b/hero_game1-2.html
@@ -17,7 +17,7 @@
         <area  alt="2" title="" href="" shape="rect" coords="350,449,478,506" style="outline:none;" target="_self"     />
         <area  alt="4" title="" href="" shape="rect" coords="642,481,727,611" style="outline:none;" target="_self"     />
         <area  alt="5" title="" href="" shape="rect" coords="762,482,847,602" style="outline:none;" target="_self"     />
-        <area  alt="6" title="" href="file:///C:/Users/blyth/OneDrive/%E6%96%87%E4%BB%B6/html/hero/hero_game1-3.html" shape="rect" coords="905,479,1099,563" style="outline:none;" target="_self"     />
+        <area  alt="6" title="" href="https://nayudochesuliz.github.io/heronay/hero_game1-3.html" shape="rect" coords="905,479,1099,563" style="outline:none;" target="_self"     />
         <area  alt="7" title="" href="" shape="rect" coords="991,403,1185,464" style="outline:none;" target="_self"     />
         <area  alt="e" title="" href="" shape="rect" coords="680,260,815,301" style="outline:none;" target="_self"     />
         <area shape="rect" coords="1498,698,1500,700" alt="Image Map" style="outline:none;" title="Image Map" href="https://www.image-maps.com/" />
