--- a/hero_game1.html
+++ b/hero_game1.html
@@ -20,7 +20,7 @@
         <area  alt="5" title="" href="" shape="rect" coords="771,573,923,655" style="outline:none;" target="_self"     />
         <area  alt="6" title="" href="" shape="rect" coords="981,526,1133,608" style="outline:none;" target="_self"     />
         <area  alt="7" title="" href="" shape="rect" coords="1093,429,1273,511" style="outline:none;" target="_self"     />
-        <area  alt="8" title="" href="file:///C:/Users/blyth/OneDrive/%E6%96%87%E4%BB%B6/html/hero/hero_game1-1.html" shape="rect" coords="1042,323,1222,405" style="outline:none;" target="_self"     />
+        <area  alt="8" title="" href="https://nayudochesuliz.github.io/heronay/hero_game1-1.html" shape="rect" coords="1042,323,1222,405" style="outline:none;" target="_self"     />
         <area  alt="e" title="" href="" shape="rect" coords="651,241,831,341" style="outline:none;" target="_self"     />
         <area shape="rect" coords="1498,698,1500,700" alt="Image Map" style="outline:none;" title="Image Map" href="https://www.image-maps.com/" />
         </map>
