--- a/index.html
+++ b/index.html
@@ -149,11 +149,59 @@
                
             ]
             iimage=[
-                "superhero",
+                "white",
+                "white",
+                "white",
+                "white",
+                "godess",
+                "white",
+                "white",
+                "white",
+                "godess",
                 "",
+                "godess",
+                "",
+                "godess",
+                "hero_okay",
+                
+                "",
+                "hero_talk",
+                "godess",
+                "hero_talk",
+                "godess",
+                "hero_okay",
+
+                "",
+                "hero_proud",
+                "snowman",
+                "snowman",
+                "snowman",
+
+                "",
+                "hero_pruod",
+                "boatman",
+                "hero_confuse",
+                "godess",
+                "boatman",
+                "white",
+
+                "",
+                "white",
                 "octopus",
+                "hero_anger",
+
                 "",
-                ""
+                "castle",
+                "bsgoat",
+                "hero_shock",
+                "boatman",
+                "bsgoat",
+                "hero_anger",
+                "boatman",
+                "hero_okay",
+                "hero_anger",
+                "bsgoat",
+                "",
             ]//這裡根據需要輸入圖片名稱,如果空則不要輸入
     </script>
 </body>
