--- a/index.html
+++ b/index.html
@@ -149,14 +149,14 @@
                
             ]
             iimage=[
-                "white",
-                "white",
-                "white",
-                "white",
+                "sky",
+                "sky",
+                "sky",
+                "sky",
                 "godess",
-                "white",
-                "white",
-                "white",
+                "sky",
+                "sky",
+                "sky",
                 "godess",
                 "",
                 "godess",
@@ -183,10 +183,10 @@
                 "hero_confuse",
                 "godess",
                 "boatman",
-                "white",
+                "sky",
 
                 "",
-                "white",
+                "sky",
                 "octopus",
                 "hero_anger",
 
