--- a/index.html
+++ b/index.html
@@ -155,12 +155,12 @@
                 "sky",
                 "godess",
                 "sky",
-                "sky",
-                "sky",
-                "godess",
+
                 "",
                 "godess",
-                "",
+                "hero_talk",
+                "godess",
+                "hero_talk",
                 "godess",
                 "hero_okay",
                 
@@ -174,7 +174,7 @@
                 "",
                 "hero_proud",
                 "snowman",
-                "snowman",
+                "hero_shock",
                 "snowman",
 
                 "",
